--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "ejs": "2.3.3",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "mailchimp": "^1.1.4"
   },
   "engines": {
     "node": "0.12.7"
