--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.5",
-  "description": "A sample Node.js app using Express 4",
+  "name": "node-js-sds",
+  "version": "0.1",
+  "description": "Node.js SDS",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
